examples/test/testpolicy19127.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19127
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key49: value6
      key40: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value42
          key11: value29
          key41: value4
      podSelector:
        matchLabels:
          key46: value24
          key7: value11
